--- a/CSP-demo/Components/Layout/NavMenu.razor
+++ b/CSP-demo/Components/Layout/NavMenu.razor
@@ -25,5 +25,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="image-src">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> image-src
+            </NavLink>
+        </div>
     </nav>
 </div>
