--- a/CSP-demo/Components/App.razor
+++ b/CSP-demo/Components/App.razor
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="app.css"/>
     <link rel="stylesheet" href="CSP-demo.styles.css"/>
     <link rel="icon" type="image/png" href="favicon.png"/>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Stick+No+Bills:wght@200..800&display=swap" rel="stylesheet">
+    
     <HeadOutlet/>
 </head>
 
